# kamekichi-bot

./: .gitignore  Cargo.toml  README.md  config.json.example  tarpaulin-report.html
.github/workflows/: build.yml  coverage.yml  semver.yml
crates/kamekichi/: Cargo.toml
crates/kamekichi-discord/: Cargo.toml
crates/kamekichi-discord/src/: error.rs  gateway.rs  heartbeat.rs  http.rs  lib.rs  message.rs
crates/kamekichi-discord/src/gateway/: mod.rs  tests.rs
crates/kamekichi-discord/src/http_api/: client.rs  mod.rs
crates/kamekichi-ws/: CHANGELOG.md  Cargo.toml  README.md  REVIEW_NOTES.md
crates/kamekichi-ws/src/: error.rs  lib.rs  proto.rs  read_buf.rs  rng.rs  send_buf.rs  tests.rs
crates/kamekichi/src/: config.rs  host.rs  lib.rs  logger.rs  refs.rs  runner.rs  state.rs  types.rs
crates/kippe/: Cargo.toml
crates/kippe/src/: main.rs
crates/testbed/: Cargo.toml
crates/testbed/src/: echo.rs  greeter.rs  lib.rs  logger.rs  main.rs  sentinel.rs  shibboleth.rs
