[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.dependencies]
kamekichi-ws = { path = "crates/kamekichi-ws", version = "0.1", features = ["rand"] }
kamekichi-discord = { path = "crates/kamekichi-discord", version = "0.0.1" }
kamekichi = { path = "crates/kamekichi", version = "0.0.1" }
