[package]
name = "kamekichi-discord"
version = "0.0.1"
edition = "2024"

[dependencies]
kamekichi-ws = { path = "../kamekichi-ws" }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
webpki-roots = "1.0.6"
serde_json = { version = "1.0.149", features = ["raw_value"] }
getrandom = "0.4.2"
rand_core = "0.10.0"
rand_xoshiro = "0.8.0"
