[package]
name = "kamekichi-discord"
version = "0.0.1"
edition = "2024"
description = "Discord client library"
license = "MIT / Apache-2.0"
repository = "https://github.com/golddranks/kamekichi-bot"

[dependencies]
kamekichi-ws = "0.1.0"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
webpki-roots = "1.0.6"
serde_json = { version = "1.0.149", features = ["raw_value"] }
getrandom = "0.4.2"
rand_core = "0.10.0"
rand_xoshiro = "0.8.0"
